Fixed triangle spacing

--- a/frontend/src/components/AddALandlord.css
+++ b/frontend/src/components/AddALandlord.css
@@ -64,7 +64,7 @@ html, body {
     position: absolute;
     height: auto;
     width: 10px;
-    left: 230px;
+    left: 200px;
     top: 269px;
 }
 
